# animal-sound-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml
src/asg/: __init__.py  datasets.py  losses.py  models.py  train.py  utils.py
src/asg/datasets/: __init__.py  esc50.py  inatsounds.py
src/asg/models/: base.py  memorizer.py  model0.py  model1.py  model2.py  zelsa.py  zvae.py
