[project]
name = "asg"
version = "0.1.0"
description = "Animal sound generator"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Austin Bowen", email = "austin.bowen.314@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[project.urls]
Homepage = "https://github.com/austin-bowen/asg"
Issues = "https://github.com/austin-bowen/asg/issues"
