[project]
name = "asg"
version = "0.1.0"
description = "Animal sound generator"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Austin Bowen", email = "austin.bowen.314@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "descript-audio-codec>=1.0.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.13.0",
    "tqdm>=4.68.1",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[build-system]
requires = ["uv_build>=0.9.6,<1.0.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[project.urls]
Homepage = "https://github.com/austin-bowen/asg"
Issues = "https://github.com/austin-bowen/asg/issues"
